# Integral-OMP

./: CMakeLists.txt  README.md  hit.cpp  lcg.h  main.cpp  mersenne.h  monte_carlo.h  parser_lib.h  xor_shift_random.h
research/: config.json  custom-output.txt  data.txt  research_best.h  run-script.sh
research/lcg-results/: dynamic-t1-c0.txt  dynamic-t1-c1.txt  dynamic-t1-c1024.txt  dynamic-t1-c16.txt  dynamic-t1-c2.txt  dynamic-t1-c4.txt  dynamic-t1-c65536.txt  dynamic-t1-c8.txt  dynamic-t2-c0.txt  dynamic-t2-c1.txt  dynamic-t2-c1024.txt  dynamic-t2-c16.txt  dynamic-t2-c2.txt  dynamic-t2-c4.txt  dynamic-t2-c65536.txt  dynamic-t2-c8.txt  dynamic-t3-c0.txt  dynamic-t3-c1.txt  dynamic-t3-c1024.txt  dynamic-t3-c16.txt  dynamic-t3-c2.txt  dynamic-t3-c4.txt  dynamic-t3-c65536.txt  dynamic-t3-c8.txt  dynamic-t4-c0.txt  dynamic-t4-c1.txt  dynamic-t4-c1024.txt  dynamic-t4-c16.txt  dynamic-t4-c2.txt  dynamic-t4-c4.txt  dynamic-t4-c65536.txt  dynamic-t4-c8.txt  dynamic-t5-c0.txt  dynamic-t5-c1.txt  dynamic-t5-c1024.txt  dynamic-t5-c16.txt  dynamic-t5-c2.txt  dynamic-t5-c4.txt  dynamic-t5-c65536.txt  dynamic-t5-c8.txt  (+57 more)
research/mersenne-results/: dynamic-t1-c0.txt  dynamic-t1-c1.txt  dynamic-t1-c1024.txt  dynamic-t1-c16.txt  dynamic-t1-c2.txt  dynamic-t1-c4.txt  dynamic-t1-c65536.txt  dynamic-t1-c8.txt  dynamic-t2-c0.txt  dynamic-t2-c1.txt  dynamic-t2-c1024.txt  dynamic-t2-c16.txt  dynamic-t2-c2.txt  dynamic-t2-c4.txt  dynamic-t2-c65536.txt  dynamic-t2-c8.txt  dynamic-t3-c0.txt  dynamic-t3-c1.txt  dynamic-t3-c1024.txt  dynamic-t3-c16.txt  dynamic-t3-c2.txt  dynamic-t3-c4.txt  (+75 more)
(+97 files in other folders)
